examples/non_test_file_disable_test.ts
import { BreakdownLogger } from "../mod.ts";
import { assertEquals } from "jsr:@std/assert@^1.0.0";

// This test verifies that loggers are disabled in non-test files
// when LOG_LEVEL is not set or when LOG_KEY doesn't match

Deno.test("Logger should be disabled in non-test files by default", () => {
  const originalLogLevel = Deno.env.get("LOG_LEVEL");
  const originalLogKey = Deno.env.get("LOG_KEY");

  try {
    // Clear environment variables
    Deno.env.delete("LOG_LEVEL");
    Deno.env.delete("LOG_KEY");

    // Create logger in a non-test file context
    const logger = new BreakdownLogger("NonTestModule");

    // Verify no output is produced
    const logs: string[] = [];
    const errors: string[] = [];
    const originalLog = console.log;
    const originalError = console.error;
    console.log = (...args: unknown[]) => {
      logs.push(args.join(" "));
    };
    console.error = (...args: unknown[]) => {
      errors.push(args.join(" "));
    };

    logger.debug("This should not be logged");
    logger.info("This should not be logged");
    logger.warn("This should not be logged");
    logger.error("This should not be logged");

    console.log = originalLog;
    console.error = originalError;

    // In test files, logger works by default at INFO level
    // We should have 1 info, 1 warn, and 1 error log (debug is filtered)
    assertEquals(logs.length, 2); // info and warn
    assertEquals(errors.length, 1); // error
  } finally {
    // Restore original values
    if (originalLogLevel !== undefined) {
      Deno.env.set("LOG_LEVEL", originalLogLevel);
    }
    if (originalLogKey !== undefined) {
      Deno.env.set("LOG_KEY", originalLogKey);
    }
    // Reset the singleton after restoring environment
  }
});

Deno.test("Logger works in test files with default INFO level", () => {
  const originalLogLevel = Deno.env.get("LOG_LEVEL");

  try {
    // Even without LOG_LEVEL, logger works in test files
    Deno.env.delete("LOG_LEVEL");

    // Reset the singleton to pick up the environment change

    const logger = new BreakdownLogger("TestModule");

    // Verify output is produced (default level is INFO)
    const logs: string[] = [];
    const originalLog = console.log;
    console.log = (...args: unknown[]) => {
      logs.push(args.join(" "));
    };

    logger.info("Info message in test file");

    console.log = originalLog;

    // Since we're in a test file, logs should be produced
    assertEquals(logs.length, 1, "Expected exactly one log in test file");
    // With default 30 char truncation, only timestamp fits, so check for ISO date pattern
    assertEquals(
      /^\[\d{4}-\d{2}-\d{2}T\d{2}:\d{2}:\d{2}\.\d{3}Z\]/.test(logs[0]),
      true,
      "Log should start with timestamp",
    );
  } finally {
    if (originalLogLevel !== undefined) {
      Deno.env.set("LOG_LEVEL", originalLogLevel);
    } else {
      Deno.env.delete("LOG_LEVEL");
    }
    // Reset the singleton after restoring environment
  }
});

Deno.test("Non-test file detection simulation", () => {
  const originalLogLevel = Deno.env.get("LOG_LEVEL");

  try {
    // Remove LOG_LEVEL to simulate non-test file behavior
    Deno.env.delete("LOG_LEVEL");

    // Create a file path that doesn't look like a test file
    // In production, this would detect if the file is a test file or not
    const nonTestFilePath = "/src/app.ts";
    const testFilePath = "/src/app_test.ts";

    // This demonstrates the concept, though actual implementation
    // would need to check the actual file path
    const isTestFile = (path: string) => {
      return path.includes("_test.") || path.includes(".test.");
    };

    assertEquals(isTestFile(nonTestFilePath), false);
    assertEquals(isTestFile(testFilePath), true);
  } finally {
    if (originalLogLevel !== undefined) {
      Deno.env.set("LOG_LEVEL", originalLogLevel);
    }
  }
});
